# claw-extensions

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  EXTRACTION_SUMMARY.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  README.md  error.rs  lib.rs
extensions/bot/: mod.rs
extensions/equipment/: consensus.rs  coordination.rs  distillation.rs  memory.rs  mod.rs  reasoning.rs  spreadsheet.rs
extensions/gpu/: mod.rs
extensions/learning/: distillation.rs  mod.rs  training.rs
extensions/monitoring/: mod.rs
extensions/social/: consensus.rs  message.rs  mod.rs  patterns.rs  relationships.rs  routing.rs  strategies.rs
extensions/websocket/: mod.rs  protocol.rs  server.rs
